--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "1.9.0",
+    "@typescript-eslint/parser": "1.9.0",
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
