--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "prettier": "^2.0.4"
   }
 }
