--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "prettier": "^2.0.4"
+  },
+  "devDependencies": {
+    "string.prototype.trimend": "^1.0.1"
   }
 }
