--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@redisrupt/eslint-red",
-  "version": "7.0.0-beta.1",
+  "version": "7.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
