REF: add prerelease npm script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "post-v": "git push --no-verify && git push --tags --no-verify",
     "bump-major": "npm run pre-v && npm version major -m 'BLD: Release v%s' && npm run post-v",
     "bump-minor": "npm run pre-v && npm version minor -m 'BLD: Release v%s' && npm run post-v",
-    "bump-patch": "npm run pre-v && npm version patch -m 'BLD: Release v%s' && npm run post-v"
+    "bump-patch": "npm run pre-v && npm version patch -m 'BLD: Release v%s' && npm run post-v",
+    "bump-prerelease:beta": "npm run pre-v && npm version prerelease -m 'BLD: Release v%s --preid=beta' && npm run post-v"
   },
   "author": "reva",
   "license": "UNLICENSED",
